--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
   }
   
   p.frase {
-    color: blue;
+    color: white;
     font-size: 24px;
     line-height: 40px;
     margin-left: 18px;
